--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Dopamine Core Technologies</title>
+  </head>
+  <body>
+    <h1>Welcome to Dopamine Core Technologies</h1>
+    <p>More dopamine, less chaos. This is only the beginning…</p>
+  </body>
+</html>
