--- a/index.html
+++ b/index.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Dopamine Core Technologies</title>
-  </head>
-  <body>
-    <h1>Welcome to Dopamine Core Technologies</h1>
-    <p>More dopamine, less chaos. This is only the beginning…</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dopamine Core Technologies</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      color: #222;
+    }
+    header {
+      background: #151515;
+      color: #fff;
+      padding: 30px;
+      text-align: center;
+    }
+    main {
+      max-width: 800px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 13px;
+      color: #888;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Dopamine Core Technologies</h1>
+    <p>AI-Powered Nutrition. Human-Centered Design.</p>
+  </header>
+  <main>
+    <h2>About Us</h2>
+    <p>
+      Dopamine Core Technologies is building intelligent systems that personalize nutrition, track mood-food interaction, and optimize human performance. Our mission is to blend behavioral science, AI, and wellness into accessible technology for real people.
+    </p>
+
+    <h2>What We Do</h2>
+    <ul>
+      <li>🧠 AI-Powered Nutrition Matching</li>
+      <li>📈 Mood-Based Meal Planning</li>
+      <li>🌱 Culturally-Aware Food Tracking</li>
+    </ul>
+
+    <h2>Founder</h2>
+    <p>Rom Yamin — Founder & CEO</p>
+    <p>Currently based in Bangalore, India</p>
+
+    <h2>Contact</h2>
+    <p>Email: [your email here]</p>
+  </main>
+  <footer>
+    &copy; 2025 Dopamine Core Technologies
+  </footer>
+</body>
 </html>
