--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dopamine Core Technologies</title>
   <style>
     body {
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
+      padding: 2rem;
+      background-color: #f5f5f5;
       color: #222;
     }
     header {
-      background: #151515;
+      background-color: #111;
       color: #fff;
-      padding: 30px;
+      padding: 2rem;
       text-align: center;
     }
-    main {
-      max-width: 800px;
-      margin: auto;
-      padding: 40px 20px;
+    h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    section {
+      margin-top: 2rem;
+    }
+    ul {
+      padding-left: 1.2rem;
+    }
+    li {
+      margin-bottom: 0.5rem;
     }
     footer {
+      margin-top: 4rem;
       text-align: center;
-      padding: 20px;
-      font-size: 13px;
+      font-size: 0.85rem;
       color: #888;
     }
   </style>
@@ -35,28 +44,33 @@
     <h1>Dopamine Core Technologies</h1>
     <p>AI-Powered Nutrition. Human-Centered Design.</p>
   </header>
-  <main>
+
+  <section>
     <h2>About Us</h2>
     <p>
-      Dopamine Core Technologies is building intelligent systems that personalize nutrition, track mood-food interaction, and optimize human performance. Our mission is to blend behavioral science, AI, and wellness into accessible technology for real people.
+      Dopamine Core Technologies is building intelligent systems that personalize nutrition,
+      track mood-food interaction, and optimize human performance. Our mission is to blend behavioral
+      science, AI, and wellness into accessible technology for real people.
     </p>
+  </section>
 
+  <section>
     <h2>What We Do</h2>
     <ul>
       <li>🧠 AI-Powered Nutrition Matching</li>
       <li>📈 Mood-Based Meal Planning</li>
       <li>🌱 Culturally-Aware Food Tracking</li>
     </ul>
+  </section>
 
+  <section>
     <h2>Founder</h2>
-    <p>Rom Yamin — Founder & CEO</p>
+    <p>Rom Yamin — Co-Founder & CEO</p>
     <p>Currently based in Bangalore, India</p>
+  </section>
 
-    <h2>Contact</h2>
-    <p>Email: [your email here]</p>
-  </main>
   <footer>
-    &copy; 2025 Dopamine Core Technologies
+    © 2025 Dopamine Core Technologies
   </footer>
 </body>
 </html>
