--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section>
     <h2>Founder</h2>
     <p>Rom Yamin — Co-Founder & CEO</p>
-    <p>Currently based in Bangalore, India</p>
+    <p>Launching operations in Bangalore, India</p>
   </section>
 
   <footer>
