--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <p>AI-Powered Nutrition. Human-Centered Design.</p>
   </header>
 
+  <!-- forcing GitHub to update because it's being slow as fck -->
+
   <section>
     <h2>About Us</h2>
     <p>
